--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ jedi==0.18.1
 kombu==5.2.4
 matplotlib-inline==0.1.3
 mccabe==0.7.0
+numpy==1.23.2
 packaging==21.3
 parso==0.8.3
 pexpect==4.8.0
@@ -40,6 +41,7 @@ pyflakes==2.5.0
 Pygments==2.12.0
 pygraphviz==1.9
 pyparsing==3.0.9
+python-dateutil==2.8.2
 pytz==2022.1
 redis==4.3.4
 requests==2.28.1
